--- a/tests/integration_tests/config/production_scale_events.yml
+++ b/tests/integration_tests/config/production_scale_events.yml
@@ -9,6 +9,7 @@ CTA_SIMPIPE:
     INTERPOLATE: True
     OUTPUT_PATH: simtools-output
     OUTPUT_FILE: "interpolated_scaled_events.json"
+    METRIC: "tests/resources/production_simulation_config_metrics.yaml"
 
   INTEGRATION_TESTS:
     - OUTPUT_FILE: "interpolated_scaled_events.json"
