--- a/tests/integration_tests/config/production_generate_simulation_config.yml
+++ b/tests/integration_tests/config/production_generate_simulation_config.yml
@@ -9,7 +9,7 @@ CTA_SIMPIPE:
     CTAO_DATA_LEVEL: "B"
     SCIENCE_CASE: "high_precision"
     FILE_PATH: "tests/resources/production_dl2_fits/prod6_LaPalma-20deg_gamma_cone.N.Am-4LSTs09MSTs_ID0_reduced.fits"
-    FILE_TYPE: "On-source"
+    FILE_TYPE: "point-like"
     METRICS_FILE: tests/resources/production_simulation_config_metrics.yaml
     OUTPUT_PATH: simtools-output
     OUTPUT_FILE: "configured_simulation_params.json"
