--- a/pyproject.toml
+++ b/pyproject.toml
@@ -292,7 +292,7 @@ name = "New Features"
 showcontent = true
 
 [tool.towncrier.fragment.bugfix]
-name = "Bug Fixes"
+name = "Bugfixes"
 showcontent = true
 
 [tool.towncrier.fragment.api]
