--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,11 +99,9 @@ scripts.simtools-validate-cumulative-psf = "simtools.applications.validate_cumul
 scripts.simtools-validate-file-using-schema = "simtools.applications.validate_file_using_schema:main"
 scripts.simtools-validate-optics = "simtools.applications.validate_optics:main"
 
-[tool.setuptools]
-packages = [
-  "simtools",
-]
-include-package-data = true
+[tool.setuptools.packages.find]
+where = [ "simtools" ]
+exclude = [ "simtools._dev_version" ]
 
 [tool.setuptools_scm]
 write_to = "simtools/_version.py"
