--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,9 @@ scripts.simtools-validate-cumulative-psf = "simtools.applications.validate_cumul
 scripts.simtools-validate-file-using-schema = "simtools.applications.validate_file_using_schema:main"
 scripts.simtools-validate-optics = "simtools.applications.validate_optics:main"
 
+[tool.setuptools]
+package-dir = { "" = "src" }
+
 [tool.setuptools.packages.find]
 where = [ "src" ]
 exclude = [ "simtools._dev_version" ]
