--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -99,7 +99,7 @@ jobs:
         shell: bash -l {0}
         run: |
           pytest --durations=10 --color=yes -n auto --dist loadscope \
-            --cov --cov-report=xml
+            --cov=simtools --cov-report=xml
 
       # CTAO-DPPS-SonarQube
       - uses: SonarSource/sonarqube-scan-action@v4.0.0
