--- a/pyproject.toml
+++ b/pyproject.toml
@@ -261,7 +261,7 @@ minversion = "6.0"
 norecursedirs = [
   "build",
   "docs/_build",
-  "simtools/applications",
+  "src/simtools/applications",
 ]
 addopts = "-v --cov=simtools --cov-report=xml --cov-report=term"
 testpaths = "tests/unit_tests/"
@@ -274,7 +274,7 @@ exclude_also = [
 ]
 
 [tool.coverage.run]
-omit = [ "src/ctapipe/_version.py" ]
+omit = [ "src/simtools/_version.py" ]
 relative_files = true
 source = [ "src/*" ]
 
