--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -91,5 +91,4 @@ jobs:
         run: |
           source /workdir/env/bin/activate
           pip install -e '.[tests,dev,doc]'
-          ls /workdir/env/lib64/python3.11/site-packages/simtools/schemas/
-          pytest -x --model_version=${{ matrix.type }} --color=yes --durations=20 -n auto --dist loadscope --no-cov tests/integration_tests/
+          pytest --model_version=${{ matrix.type }} --color=yes --durations=20 -n auto --dist loadscope --no-cov tests/integration_tests/
