--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
   "astropy",
   "boost-histogram",
   "ctao-dpps-cosmic-ray-spectra",
-  "ctapipebase",
+  "ctapipe",
   "eventio",
   "jsonschema",
   "matplotlib",
