--- a/tests/resources/plot_table_data/plot_quantum_efficiency_config_parameter.yml
+++ b/tests/resources/plot_table_data/plot_quantum_efficiency_config_parameter.yml
@@ -1,10 +1,11 @@
+---
 CTA_SIMPIPE:
   PLOT:
     TYPE: quantum_efficiency
     TITLE: 'Quantum/detection efficiency'
     XTITLE: 'Wavelength [nm]'
     YTITLE: 'Quantum/detection efficiency'
-    NO_MARKERS: True
+    NO_MARKERS: true
     TABLES:
       - PARAMETER: quantum_efficiency
         TELESCOPE: LSTN-01
