--- a/tests/resources/plot_table_data/plot_reflectivity_parameter.yml
+++ b/tests/resources/plot_table_data/plot_reflectivity_parameter.yml
@@ -1,10 +1,11 @@
+---
 CTA_SIMPIPE:
   PLOT:
     TYPE: mirror reflectivity
     TITLE: 'Mirror reflectivity'
     XTITLE: 'Wavelength [nm]'
     YTITLE: 'Reflectivity'
-    NO_MARKERS: True
+    NO_MARKERS: true
     TABLES:
       - PARAMETER: mirror_reflectivity
         TELESCOPE: LSTN-01
