--- a/tests/resources/plot_table_data/plot_camera_filter_parameter.yml
+++ b/tests/resources/plot_table_data/plot_camera_filter_parameter.yml
@@ -1,10 +1,11 @@
+---
 CTA_SIMPIPE:
   PLOT:
     TYPE: camera filter
     TITLE: 'Camera filter'
     XTITLE: 'Wavelength (nm)'
     YTITLE: 'Transmission'
-    NO_MARKERS: True
+    NO_MARKERS: true
     TABLES:
       - PARAMETER: camera_filter
         TELESCOPE: LSTN-01
