--- a/tests/resources/plot_table_data/plot_fadc_pulse_shape_parameter.yml
+++ b/tests/resources/plot_table_data/plot_fadc_pulse_shape_parameter.yml
@@ -1,10 +1,11 @@
+---
 CTA_SIMPIPE:
   PLOT:
     TYPE: fadc_pulse_shape
     TITLE: 'FADC pulse shape'
     XTITLE: 'Time [ns]'
     YTITLE: 'Amplitude [a.u.]'
-    NO_MARKERS: True
+    NO_MARKERS: true
     TABLES:
       - PARAMETER: fadc_pulse_shape
         TELESCOPE: LSTN-01
@@ -41,7 +42,7 @@ CTA_SIMPIPE:
         LABEL: 'MSTN (high gain)'
         COLUMN_X: 'time'
         COLUMN_Y: 'amplitude'
-        NORMALIZE_Y: True
+        NORMALIZE_Y: true
       - PARAMETER: fadc_pulse_shape
         TELESCOPE: MSTx-NectarCam
         SITE: NORTH
@@ -49,7 +50,7 @@ CTA_SIMPIPE:
         LABEL: 'MSTN (low gain)'
         COLUMN_X: 'time'
         COLUMN_Y: 'amplitude (low gain)'
-        NORMALIZE_Y: True
+        NORMALIZE_Y: true
       - PARAMETER: fadc_pulse_shape
         TELESCOPE: MSTx-FlashCam
         SITE: SOUTH
