--- a/tests/resources/plot_table_data/plot_single_pe_config_parameter.yml
+++ b/tests/resources/plot_table_data/plot_single_pe_config_parameter.yml
@@ -1,3 +1,4 @@
+---
 CTA_SIMPIPE:
   PLOT:
     TYPE: single_pe
@@ -8,7 +9,7 @@ CTA_SIMPIPE:
     YSCALE: 'log'
     XLIM: [0., 40.]
     YLIM: [1.e-11, null]
-    NO_MARKERS: True
+    NO_MARKERS: true
     TABLES:
       - PARAMETER: pm_photoelectron_spectrum
         TELESCOPE: LSTN-01
