--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -16,6 +16,9 @@ env:
 jobs:
   changelog:
     runs-on: ubuntu-latest
+    if: >
+      github.event.pull_request.draft == false &&
+      contains(github.event.pull_request.labels.*.name, 'ready for review')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
