--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,7 +6,7 @@ name: Changelog
 on:
   pull_request:
     # should also be re-run when changing labels
-    types: [opened, reopened, labeled, unlabeled, synchronize, edited]
+    types: [opened, reopened, labeled, unlabeled, synchronize, ready_for_review]
     branches:
       - 'main'
 
