--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -8,6 +8,7 @@ ARG AVX_FLAG="avx2"
 ARG CORSIKA_VERSION="77550"
 ARG BERNLOHR_VERSION="1.68"
 ARG BUILD_BRANCH=main
+ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
 
 RUN yum update -y && yum install -y \
     gcc-fortran gsl-devel libgfortran \
@@ -83,20 +84,21 @@ RUN echo "build_opt: $BUILD_OPT" > /workdir/sim_telarray/build_opts.yml && \
 FROM almalinux:9.5-minimal
 WORKDIR /workdir
 ARG BUILD_BRANCH=main
+ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
 COPY --from=build_image /workdir/sim_telarray/ /workdir/sim_telarray/
 
 RUN microdnf update -y && microdnf install -y \
     bc findutils gcc-c++ git gsl-devel gcc-fortran libgfortran \
-    procps python3.11-pip zstd && \
+    procps python3.12-devel zstd && \
     microdnf clean all
 
-RUN BUILD_BRANCH=$(echo $BUILD_BRANCH | sed 's#refs/tags/##') && \
-    git clone -b $BUILD_BRANCH https://github.com/gammasim/simtools.git --depth 1 && \
-    python3.11 -m venv env && \
-    source env/bin/activate && \
-    pip install -U pip && \
-    pip install --no-cache-dir ./simtools && \
-    rm -rf simtools
+RUN BUILD_BRANCH=$(echo $BUILD_BRANCH | sed 's#refs/tags/##') \
+  && git clone -b $BUILD_BRANCH https://github.com/gammasim/simtools.git --depth 1 \
+  && python3.12 -m venv env \
+  && source env/bin/activate \
+  && pip install -U pip \
+  && pip install --no-cache-dir ${SIMTOOLS_REQUIREMENT}
+#  && pip install --no-cache-dir ./simtools
 
 ENV SIMTEL_PATH="/workdir/sim_telarray/"
 ENV PATH="/workdir/env/bin/:$PATH"
