--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -14,6 +14,10 @@ on:
     - cron: '0 0 * * 0'  # Every Sunday at 00:00 UTC (build only)
 
 env:
+  SIMTOOLS_DB_SERVER: ${{ secrets.DB_SERVER }}
+  SIMTOOLS_DB_API_USER: ${{ secrets.DB_READ_USER }}
+  SIMTOOLS_DB_API_PW: ${{ secrets.DB_READ_PW }}
+  SIMTOOLS_DB_API_PORT: ${{ secrets.DB_API_PORT }}
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   CLOUD_URL: "https://syncandshare.desy.de/index.php/s/"
@@ -205,3 +209,37 @@ jobs:
           file: ./docker/Dockerfile-prod-opt
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}-prod-opt
+      - name: set image tag
+        run: echo "image_tag=${{ steps.meta.outputs.tags }}" >> $GITHUB_OUTPUT
+        id: set-image-tag
+    outputs:
+      image_tag: ${{ steps.meta.outputs.tags }}
+
+  test-images:
+    runs-on: ubuntu-latest
+    needs: build-production-images-optimized
+    strategy:
+      matrix:
+        version:
+          - {simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67'}
+        hadronic_model: ['qgs2']
+        production:
+          - {build_opt: 'prod6-sc', extra_def: '-DMAXIMUM_TELESCOPES=128'}
+          - {build_opt: 'prod6-baseline', extra_def: ''}
+        avx_instruction: ['noOpt']
+
+    steps:
+      # test the no-opt image with one application using the database,
+      # CORSIKA, sim_telarray, and simtools
+      - name: Test image
+        if: ${{ matrix.avx_instruction == 'noOpt' }}
+        run: >
+          docker run --rm
+          -e "SIMTOOLS_SIMTEL_PATH='/workdir/sim_telarray'"
+          -e "SIMTOOLS_DB_API_PORT=${{ env.SIMTOOLS_DB_API_PORT }}"
+          -e "SIMTOOLS_DB_API_USER=${{ env.SIMTOOLS_DB_API_USER }}"
+          -e "SIMTOOLS_DB_API_PW=${{ env.SIMTOOLS_DB_API_PW }}"
+          -e "SIMTOOLS_DB_SERVER=${{ env.SIMTOOLS_DB_SERVER }}"
+          -v "$(pwd):/workdir/external" ${{ needs.build-production-images-optimized.outputs.image_tag }}
+          bash -c "cd /workdir/external && simtools-simulate-prod --config /workdir/external/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid.yml"
+        shell: /usr/bin/bash -e {0}
