--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -28,7 +28,7 @@ RUN cd corsika-$CORSIKA_VERSION && \
     if [[ $CORSIKA_VERSION -eq 77550 ]]; then \
         (cd src && patch -b -p0 corsika.F < "../../corsika-77550.patch"); \
     fi && \
-    if [[ "$AVX_FLAG" == "noOpt" ]]; then \
+    if [[ "$AVX_FLAG" == "noopt" ]]; then \
         ../corsika_build_script $HADRONIC_MODEL generic; \
     else \
         ./corsika_opt_patching.sh && \
@@ -40,7 +40,7 @@ RUN cd corsika-$CORSIKA_VERSION && \
 RUN make -C corsika-$CORSIKA_VERSION clean && rm -f */*.a lib/*/*.a && \
     AVX_EXTRA_FLAG=$([ "$AVX_FLAG" = "avx512f" ] && echo "-ffp-contract=off" || echo "") && \
     CFLAGS="" && CXXFLAGS="" && FFLAGS="" && \
-    if [[ "$AVX_FLAG" == "noOpt" ]]; then \
+    if [[ "$AVX_FLAG" == "noopt" ]]; then \
         CFLAGS="-g  -std=c99 -O3"; \
         CXXFLAGS="-g  -std=c99 -O3"; \
         FFLAGS="-g -ffixed-line-length-132 -fno-automatic -frecord-marker=4 -std=legacy -std=c99 -O3"; \
