--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -258,3 +258,5 @@ jobs:
         run: |
           source /workdir/env/bin/activate
           simtools-simulate-prod --config tests/integration_tests/config/simulate_prod_gamma_20_deg_South_pack_for_grid.yml
+          pip install pytest pytest-requirements
+          pytest --no-cov -n auto tests/integration_tests/test_applications_from_config.py
